[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["zalim <zalimpshigotizhev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
motor = "^3.4.0"
ipython = "^8.23.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
